cleaned up code, and used the latest limelight url functionality from 2026