@@ -913,14 +913,12 @@ public class LimelightHelpers {
 
     public static URL getLimelightURLString(String tableName, String request) {
         String urlString = "http://" + sanitizeName(tableName) + ".local:5807/" + request;
-        URL url;
         try {
-            url = URI.create(urlString).toURL();
-            return url;
+            return new URL(urlString);
         } catch (MalformedURLException e) {
-            System.err.println("bad LL URL");
+            System.err.println("bad LL URL: " + urlString);
+            return null;
         }
-        return null;
     }
     /////
     /////
